--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "^21.0.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
+    "react-native-router-flux": "^4.0.0-beta.22",
     "watchman": "^0.1.8"
   }
 }
