--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "expo": "^21.0.0",
+    "mtgsdk": "^0.3.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
     "react-native-router-flux": "^4.0.0-beta.22",
