--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.5.0",
+    "babel-preset-react-native": "^4.0.0",
     "jest-expo": "^21.0.2",
+    "react-native-scripts": "1.5.0",
     "react-test-renderer": "16.0.0-alpha.12"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -19,11 +20,15 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.16.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-expo": "^4.0.0",
     "expo": "^21.0.0",
-    "mtgsdk": "^0.3.0",
+    "firebase": "^4.5.2",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
     "react-native-router-flux": "^4.0.0-beta.22",
+    "redux": "^3.7.2",
     "watchman": "^0.1.8"
   }
 }
