--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-native": "^0.48.4",
     "react-native-router-flux": "^4.0.0-beta.22",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "thunk": "0.0.1",
     "watchman": "^0.1.8"
   }
 }
