--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
     "react-native-router-flux": "^4.0.0-beta.22",
+    "react-native-swipeout": "^2.3.3",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "thunk": "0.0.1",
